--- a/Completed/Ball.html
+++ b/Completed/Ball.html
@@ -4,53 +4,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Throwable Ball (Stress Relief)</title>
     <style>
-        /* Basic resets */
+        /* Reset margins, paddings, and box-sizing for all elements */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
 
+        /* Body styling with dark background */
         body {
-            background-color: #1c1c1c; /* Dark theme background */
-            color: white;
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            overflow: hidden;
-            position: relative;
+            background-color: #1c1c1c; /* Set background color */
+            color: white;  /* Set text color to white */
+            font-family: Arial, sans-serif; /* Set font */
+            display: flex; /* Use flexbox for layout */
+            justify-content: center; /* Center content horizontally */
+            align-items: center; /* Center content vertically */
+            height: 100vh; /* Full viewport height */
+            overflow: hidden; /* Prevent scrolling */
+            position: relative; /* Position relative for positioning of the button */
         }
 
-        /* Toggle button styling */
+        /* Style for the toggle button */
         .toggle-btn {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            padding: 10px 20px;
-            background-color: #008080;
-            color: white;
-            font-size: 16px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: all 0.3s ease-in-out;
+            position: absolute; /* Position the button absolutely */
+            top: 20px; /* Distance from the top of the page */
+            right: 20px; /* Distance from the right of the page */
+            padding: 10px 20px; /* Set padding for button */
+            background-color: #008080; /* Set background color */
+            color: white; /* Set text color */
+            font-size: 16px; /* Set font size */
+            border: none; /* Remove default border */
+            border-radius: 5px; /* Round the corners */
+            cursor: pointer; /* Change cursor to pointer on hover */
+            transition: all 0.3s ease-in-out; /* Add smooth transition effect */
         }
 
+        /* Button hover effect */
         .toggle-btn:hover {
-            background-color: #00b3b3;
+            background-color: #00b3b3; /* Change background color on hover */
         }
 
+        /* Remove outline when button is focused */
         .toggle-btn:focus {
             outline: none;
         }
 
-        /* Canvas Styling */
+        /* Styling for the canvas */
         canvas {
-            position: absolute;
-            top: 0;
-            left: 0;
+            position: absolute; /* Make the canvas position absolute */
+            top: 0; /* Align the canvas to the top of the page */
+            left: 0; /* Align the canvas to the left of the page */
         }
     </style>
 </head>
@@ -60,123 +63,121 @@
 <button class="toggle-btn" id="toggleBoundaries">Disable Boundaries</button>
 
 <script>
-    // Point class for position and mouse position
+    // Helper function for creating points (used for ball and dots)
     function Pt(x, y) {
-        this.x = x;
-        this.y = y;
+        this.x = x;  // X-coordinate
+        this.y = y;  // Y-coordinate
     }
 
-    // Dot class for random dots
+    // Function to create random dots
     function Dot() {
-        this.pos = new Pt(Math.random() * c.width, Math.random() * c.height);  // Random position
+        this.pos = new Pt(Math.random() * c.width, Math.random() * c.height);  // Assign random position
         this.radius = Math.random() * 10 + 5;  // Random radius between 5 and 15
     }
 
-    // Ball class
+    // Ball class that handles drawing and movement
     function Ball() {
-        this.pos = new Pt(c.width / 2, c.height / 2);  // Ball position
-        this.mPos = new Pt(0, 0);  // Mouse position
-        this.Xvel = 0;  // X velocity
-        this.Yvel = 0;  // Y velocity
+        this.pos = new Pt(c.width / 2, c.height / 2);  // Ball's initial position
+        this.mPos = new Pt(0, 0);  // Store mouse position
+        this.Xvel = 0;  // X-axis velocity
+        this.Yvel = 0;  // Y-axis velocity
         this.accel = new Pt(0, 0);  // Acceleration
-        this.boundaryEnabled = true;  // Boundary flag
+        this.boundaryEnabled = true;  // Toggle for boundary constraints
     }
 
-    // Drawing the ball
+    // Draw the ball on canvas
     Ball.prototype.draw = function () {
-        $.fillStyle = "hsla(180, 100%, 50%, 1)";  // Neon cyan color
-        $.shadowColor = 'hsla(180, 100%, 50%, 0.8)';  // Neon glow effect
-        $.shadowBlur = 20;
-        $.shadowOffsetX = 5;
-        $.shadowOffsetY = 5;
-        $.beginPath();
-        $.arc(this.pos.x, this.pos.y, 60, 0, 2 * Math.PI); // Draw the circle (ball)
-        $.fill();
+        $.fillStyle = "hsla(180, 100%, 50%, 1)";  // Set fill color for ball
+        $.shadowColor = 'hsla(180, 100%, 50%, 0.8)';  // Set shadow color for glow effect
+        $.shadowBlur = 20;  // Set shadow blur amount
+        $.shadowOffsetX = 5;  // Set shadow horizontal offset
+        $.shadowOffsetY = 5;  // Set shadow vertical offset
+        $.beginPath();  // Start drawing a path
+        $.arc(this.pos.x, this.pos.y, 60, 0, 2 * Math.PI);  // Draw a circle for the ball
+        $.fill();  // Fill the circle with color
     };
 
-    // Updating the ball's position
+    // Update ball's position and velocity
     Ball.prototype.update = function () {
-        this.accel.x = (this.mPos.x - this.pos.x) * 0.01; // Spring-like effect
-        this.accel.y = (this.mPos.y - this.pos.y) * 0.01;
+        this.accel.x = (this.mPos.x - this.pos.x) * 0.01;  // Calculate acceleration based on mouse X position
+        this.accel.y = (this.mPos.y - this.pos.y) * 0.01;  // Calculate acceleration based on mouse Y position
 
-        this.Xvel += this.accel.x;
-        this.Yvel += this.accel.y;
+        this.Xvel += this.accel.x;  // Update X velocity based on acceleration
+        this.Yvel += this.accel.y;  // Update Y velocity based on acceleration
 
-        // Update the ball's position
-        this.pos.x += this.Xvel;
-        this.pos.y += this.Yvel;
+        this.pos.x += this.Xvel;  // Update ball's X position
+        this.pos.y += this.Yvel;  // Update ball's Y position
 
-        // Apply damping
-        this.Xvel *= 0.97;
-        this.Yvel *= 0.97;
+        this.Xvel *= 0.97;  // Apply damping to X velocity
+        this.Yvel *= 0.97;  // Apply damping to Y velocity
 
-        // Constrain ball within the window boundaries (if enabled)
+        // Boundary checks if boundaries are enabled
         if (this.boundaryEnabled) {
-            const ballRadius = 60;  // Radius of the ball
+            const ballRadius = 60;  // Ball's radius
             if (this.pos.x < ballRadius) {
-                this.pos.x = ballRadius;
-                this.Xvel *= -0.5; // Reflect the velocity
+                this.pos.x = ballRadius;  // Reflect ball at left boundary
+                this.Xvel *= -0.5;  // Reverse X velocity
             } else if (this.pos.x > c.width - ballRadius) {
-                this.pos.x = c.width - ballRadius;
-                this.Xvel *= -0.5; // Reflect the velocity
+                this.pos.x = c.width - ballRadius;  // Reflect ball at right boundary
+                this.Xvel *= -0.5;  // Reverse X velocity
             }
 
             if (this.pos.y < ballRadius) {
-                this.pos.y = ballRadius;
-                this.Yvel *= -0.5; // Reflect the velocity
+                this.pos.y = ballRadius;  // Reflect ball at top boundary
+                this.Yvel *= -0.5;  // Reverse Y velocity
             } else if (this.pos.y > c.height - ballRadius) {
-                this.pos.y = c.height - ballRadius;
-                this.Yvel *= -0.5; // Reflect the velocity
+                this.pos.y = c.height - ballRadius;  // Reflect ball at bottom boundary
+                this.Yvel *= -0.5;  // Reverse Y velocity
             }
         }
     };
 
-    // Update mouse position
+    // Update the mouse position
     Ball.prototype.mouseMove = function (e) {
-        this.mPos.x = e.clientX;
-        this.mPos.y = e.clientY;
+        this.mPos.x = e.clientX;  // Set mouse X position
+        this.mPos.y = e.clientY;  // Set mouse Y position
     };
 
-    // Resize canvas on window resize
+    // Resize canvas when the window is resized
     function resizeCanv() {
-        c.width = window.innerWidth;
-        c.height = window.innerHeight;
-        if (ball) ball.pos = new Pt(c.width / 2, c.height / 2);  // Reposition the ball
+        c.width = window.innerWidth;  // Set canvas width to window width
+        c.height = window.innerHeight;  // Set canvas height to window height
+        if (ball) ball.pos = new Pt(c.width / 2, c.height / 2);  // Reposition the ball when resized
     }
 
-    // Set up the canvas
-    var c = document.getElementById('canv');
-    var $ = c.getContext('2d');
+    // Initialize canvas and context
+    var c = document.getElementById('canv');  // Get canvas element
+    var $ = c.getContext('2d');  // Get 2D context for drawing
 
-    window.addEventListener('resize', resizeCanv, false);
+    window.addEventListener('resize', resizeCanv, false);  // Handle window resize
     resizeCanv();  // Initial canvas size adjustment
 
-    // Singleton Ball instance
+    // Create an instance of the Ball
     var ball = new Ball();
 
-    // Array of random dots
+    // Array to store random dots
     var dots = [];
-    var numDots = 20; // Number of random dots to spawn
+    var numDots = 20;  // Set initial number of dots
 
     // Function to spawn random dots
     function spawnDots() {
         for (var i = 0; i < numDots; i++) {
-            dots.push(new Dot());
+            dots.push(new Dot());  // Add a new dot to the array
         }
     }
 
-    // Call function to spawn initial dots
+    // Initial dot spawning
     spawnDots();
 
-    // Function to check collision between ball and a dot
+    // Function to check for collision between ball and a dot
     function checkCollision(dot) {
-        const dx = dot.pos.x - ball.pos.x;
-        const dy = dot.pos.y - ball.pos.y;
-        const distance = Math.sqrt(dx * dx + dy * dy);
-        return distance < 60 + dot.radius; // Ball's radius + dot's radius
+        const dx = dot.pos.x - ball.pos.x;  // Calculate X distance
+        const dy = dot.pos.y - ball.pos.y;  // Calculate Y distance
+        const distance = Math.sqrt(dx * dx + dy * dy);  // Calculate Euclidean distance
+        return distance < 60 + dot.radius;  // Return true if the ball overlaps with the dot
     }
 
-    // Remove dots that are hit by the ball
+    // Remove dots that the ball has collided with
     function removeHitDots() {
         for (var i = 0; i < dots.length; i++) {
             if (checkCollision(dots[i])) {
@@ -186,70 +187,60 @@
         }
     }
 
-    // Drawing the dots
+    // Function to draw all dots
     function drawDots() {
-        $.fillStyle = "hsla(100, 100%, 50%, 1)";  // Green color for dots
+        $.fillStyle = "hsla(100, 100%, 50%, 1)";  // Set fill color for dots
         for (var i = 0; i < dots.length; i++) {
-            $.beginPath();
-            $.arc(dots[i].pos.x, dots[i].pos.y, dots[i].radius, 0, 2 * Math.PI);
-            $.fill();
+            $.beginPath();  // Start drawing each dot
+            $.arc(dots[i].pos.x, dots[i].pos.y, dots[i].radius, 0, 2 * Math.PI);  // Draw dot circle
+            $.fill();  // Fill the dot with color
         }
     }
 
-    // Function to periodically spawn new dots
+    // Periodic dot respawn function
     function periodicDotRespawn() {
-        // After 2 seconds, spawn new dots
         setInterval(function () {
-            // Spawn new dots only if the number of dots is below the limit
+            // Only spawn new dots if there are fewer than numDots
             if (dots.length < numDots) {
-                dots.push(new Dot());
+                dots.push(new Dot());  // Add a new dot
             }
-        }, 2000); // Every 2 seconds
+        }, 500);  // Every 0.5 seconds
     }
 
-    // Call function to periodically spawn dots
+    // Call the function to periodically spawn dots
     periodicDotRespawn();
 
-    // Handle mouse events to move the ball
+    // Handle mouse movements to update ball's mouse position
     window.addEventListener('mousemove', function (e) {
-        ball.mPos.x = e.clientX;
-        ball.mPos.y = e.clientY;
+        ball.mPos.x = e.clientX;  // Update X mouse position
+        ball.mPos.y = e.clientY;  // Update Y mouse position
     });
 
-    // Toggle button functionality for enabling/disabling boundaries
+    // Toggle button for enabling/disabling boundary constraints
     document.getElementById('toggleBoundaries').addEventListener('click', function () {
-        ball.boundaryEnabled = !ball.boundaryEnabled;
-        this.textContent = ball.boundaryEnabled ? "Disable Boundaries" : "Enable Boundaries";
+        ball.boundaryEnabled = !ball.boundaryEnabled;  // Toggle boundary flag
+        this.textContent = ball.boundaryEnabled ? "Disable Boundaries" : "Enable Boundaries";  // Update button text
     });
 
-    // Request Animation Frame for smooth animation
+    // Request Animation Frame for smooth animations
     window.requestAnimFrame = (function (callback) {
         return window.requestAnimationFrame || window.webkitRequestAnimationFrame || window.mozRequestAnimationFrame || window.oRequestAnimationFrame || window.msRequestAnimationFrame ||
             function (callback) {
-                window.setTimeout(callback, 1000 / 60);
+                window.setTimeout(callback, 1000 / 60);  // Fall back to setTimeout if needed
             };
     })();
 
     // Animation loop
     function animate() {
-        // Update ball position
-        ball.update();
-
-        // Clear the canvas
-        $.clearRect(0, 0, c.width, c.height);
-
-        // Draw the ball
-        ball.draw();
-
-        // Draw and check for collisions with dots
-        drawDots();
-        removeHitDots();
-
-        // Request new animation frame
-        window.requestAnimFrame(animate);
+        ball.update();  // Update ball position and velocity
+        $.clearRect(0, 0, c.width, c.height);  // Clear canvas
+        ball.draw();  // Draw the ball
+        drawDots();  // Draw the dots
+        removeHitDots();  // Remove any dots the ball has hit
+        window.requestAnimFrame(animate);  // Request the next frame
     }
 
-    animate();
+    animate();  // Start the animation loop
 
 </script>
 
