--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <div class="container">
         <h1>Webs-of-Wonders</h1>
         <a href="Completed/Ball.html">Ball</a>
+        <a href="Completed/LiquiVoid.html">LiquiVoid</a>
         <!--
-        <a href="Completed/RPS.html">RPS</a>
         <a href="Completed/Choose.html">Select</a>
         <a href="Completed/QR Generator.html">QR Generator</a>
         <a href="Completed/QR Reader.html">QR Reader</a>
