--- a/Completed/Ball.html
+++ b/Completed/Ball.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Throwable Ball (Stress Relief)</title>
+    <title>Swing Ball (Stress Relief)</title>
     <style>
         /* Reset margins, paddings, and box-sizing for all elements */
         * {
