--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <h1>Webs-of-Wonders</h1>
         <a href="Completed/Ball.html">Ball</a>
         <a href="Completed/LiquiVoid.html">LiquiVoid</a>
+        <a href="Completed/Ripple.html">Ripple</a>
         <!--
-        <a href="Completed/Choose.html">Select</a>
         <a href="Completed/QR Generator.html">QR Generator</a>
         <a href="Completed/QR Reader.html">QR Reader</a>
         <a href="Completed/Word of the day.html">Random Meanings</a>  
