--- a/Completed/Ripple.html
+++ b/Completed/Ripple.html
@@ -29,7 +29,7 @@
         .ripple {
             position: absolute; /* Position the ripple absolutely */
             border-radius: 50%; /* Make the ripple circular */
-            background: rgba(0, 188, 212, 0.4); /* Set a lighter cyan ripple for normal */
+            background: rgba(255, 255, 255, 0.3); /* Default white ripple */
             animation: rippleAnim 2s infinite; /* Apply the ripple animation */
             transition: all 0.3s ease; /* Smooth transition for the ripple */
         }
